--- a/src/main/resouces/application-dev.properties
+++ b/src/main/resouces/application-dev.properties
@@ -2,7 +2,7 @@
 ###datasource
 ########################################################
 server.port=8080
-server.context-path=/shiro1
+server.context-path=/
 spring.datasource.url = jdbc:mysql://localhost:3306/test
 spring.datasource.username = root
 spring.datasource.password = root
