--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,11 @@
 			<type>pom</type>
 			<scope>import</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>19.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
